# dodo

./: .dockerignore  .env  API.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init_db.sh
migrations/: 20240320000000_initial.sql
src/: main.rs
src/handlers/: auth.rs  mod.rs  transaction.rs
src/models/: mod.rs  transaction.rs  user.rs
